[gd_scene load_steps=21 format=3 uid="uid://b4q2wpp4uf3ys"]

[ext_resource type="Script" uid="uid://8j55h6nlx8uw" path="res://scripts/UI/BuildingUi.gd" id="1_al7u3"]
[ext_resource type="Texture2D" uid="uid://h8vpungsiv7a" path="res://assets/UI/tilesetT3.png" id="1_ymk3k"]
[ext_resource type="PackedScene" uid="uid://biyp1uwmfu6u4" path="res://scenes/UI/SubMenuProject.tscn" id="3_qxndm"]
[ext_resource type="Texture2D" uid="uid://b3m3k28fnmlei" path="res://assets/UI/tilesetT3_pressed.png" id="4_8pln5"]
[ext_resource type="PackedScene" uid="uid://c8nnuxedv5wlo" path="res://scenes/UI/PopupBuildingDesc.tscn" id="4_qxndm"]
[ext_resource type="Texture2D" uid="uid://bs5aawnei770f" path="res://assets/UI/tilesetT3_hovered.png" id="5_ugwoq"]
[ext_resource type="AudioStream" uid="uid://v4372juvyuxc" path="res://assets/sounds/cancel_short.mp3" id="6_nk2wi"]
[ext_resource type="AnimationLibrary" uid="uid://cv3u0hvir6bgq" path="res://assets/animation/show_g.res" id="8_sbk70"]

[sub_resource type="AtlasTexture" id="AtlasTexture_s7fcw"]
atlas = ExtResource("1_ymk3k")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uu6j1"]
atlas = ExtResource("4_8pln5")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mb2fw"]
atlas = ExtResource("5_ugwoq")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ythgw"]
atlas = ExtResource("1_ymk3k")
region = Rect2(320, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8pln5"]
atlas = ExtResource("4_8pln5")
region = Rect2(320, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ugwoq"]
atlas = ExtResource("5_ugwoq")
region = Rect2(320, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3flx3"]
atlas = ExtResource("1_ymk3k")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7x4jk"]
atlas = ExtResource("4_8pln5")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p77ak"]
atlas = ExtResource("5_ugwoq")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebc2k"]
atlas = ExtResource("1_ymk3k")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tsmqy"]
atlas = ExtResource("4_8pln5")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7v1vn"]
atlas = ExtResource("5_ugwoq")
region = Rect2(256, 128, 64, 64)

[node name="MenuBuilding" type="MarginContainer"]
custom_minimum_size = Vector2(350, 700)
offset_right = 350.0
offset_bottom = 700.0
script = ExtResource("1_al7u3")
projectScene = ExtResource("3_qxndm")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(300, 530)
layout_mode = 2
texture = ExtResource("1_ymk3k")
region_rect = Rect2(320, 448, 64, 64)
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="lblName" type="Label" parent="NinePatchRect/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Nom b√¢timent"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="btnExpl" type="TextureButton" parent="NinePatchRect/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = SubResource("AtlasTexture_s7fcw")
texture_pressed = SubResource("AtlasTexture_uu6j1")
texture_hover = SubResource("AtlasTexture_mb2fw")

[node name="btnQuit" type="TextureButton" parent="NinePatchRect/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = SubResource("AtlasTexture_ythgw")
texture_pressed = SubResource("AtlasTexture_8pln5")
texture_hover = SubResource("AtlasTexture_ugwoq")

[node name="lblDesc" type="Label" parent="NinePatchRect/VBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(330, 100)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 15
text = "Desc


"
autowrap_mode = 2
text_overrun_behavior = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="NinePatchRect/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="lblScient" type="Label" parent="NinePatchRect/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 15
text = "Nombre de
scientifiques"
vertical_alignment = 1
autowrap_mode = 2

[node name="lblNbr" type="Label" parent="NinePatchRect/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18
text = "00/00"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 2

[node name="btnRem" type="TextureButton" parent="NinePatchRect/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = SubResource("AtlasTexture_3flx3")
texture_pressed = SubResource("AtlasTexture_7x4jk")
texture_hover = SubResource("AtlasTexture_p77ak")
ignore_texture_size = true
stretch_mode = 0

[node name="btnAdd" type="TextureButton" parent="NinePatchRect/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = SubResource("AtlasTexture_ebc2k")
texture_pressed = SubResource("AtlasTexture_tsmqy")
texture_hover = SubResource("AtlasTexture_7v1vn")
ignore_texture_size = true
stretch_mode = 0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="NinePatchRect/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2/btnAdd"]
stream = ExtResource("6_nk2wi")
bus = &"SFX"

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18
text = "Projets"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="NinePatchRect/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(343, 400)
layout_mode = 2
size_flags_horizontal = 0

[node name="projetContainer" type="VBoxContainer" parent="NinePatchRect/VBoxContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = -3

[node name="Projet" parent="NinePatchRect/VBoxContainer/VBoxContainer/ScrollContainer/projetContainer" instance=ExtResource("3_qxndm")]
visible = false
layout_mode = 2

[node name="Projet2" parent="NinePatchRect/VBoxContainer/VBoxContainer/ScrollContainer/projetContainer" instance=ExtResource("3_qxndm")]
visible = false
layout_mode = 2

[node name="Projet3" parent="NinePatchRect/VBoxContainer/VBoxContainer/ScrollContainer/projetContainer" instance=ExtResource("3_qxndm")]
visible = false
layout_mode = 2

[node name="Projet4" parent="NinePatchRect/VBoxContainer/VBoxContainer/ScrollContainer/projetContainer" instance=ExtResource("3_qxndm")]
visible = false
layout_mode = 2

[node name="Projet5" parent="NinePatchRect/VBoxContainer/VBoxContainer/ScrollContainer/projetContainer" instance=ExtResource("3_qxndm")]
visible = false
layout_mode = 2

[node name="popDescBuilding" parent="." instance=ExtResource("4_qxndm")]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": ExtResource("8_sbk70")
}

[connection signal="pressed" from="NinePatchRect/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/btnExpl" to="." method="_on_btn_expl_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/btnQuit" to="." method="_on_btn_quit_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2/btnRem" to="." method="_on_btn_rem_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2/btnAdd" to="." method="_on_btn_add_pressed"]
